# simple-rag-system

./: .dockerignore  .gitignore  CONDA_SETUP.md  Dockerfile  Dockerfile.frontend  LICENSE  LOCAL_SETUP.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  behave.ini  docker-compose.prod.yml  docker-compose.yml  env.example  environment-dev.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_granite_model.py
deployments/docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docker/: ollama-startup.sh
docker/grafana/: GRAFANA_DASHBOARDS.md
docker/grafana/provisioning/dashboards/: loki-logs-dashboard.json  qdrant-performance.json  rag-system-overview.json  task-queue-monitor.json
docker/grafana/provisioning/datasources/: loki.yml
docker/loki/: loki-config.yml
docker/prometheus/: alerts.yml  prometheus.yml
docker/promtail/: promtail-config.yml
docs/: 00-enhancement-summary.md  01-basic-design.md  02-c4-model.md  03-high-level-design.md  04-data-flow.md  05-sequence-diagrams.md  06-genomics-bioinformatics-use-case.md  07-advanced-retrieval.md  08-context-management.md  09-document-management.md  10-evaluation-testing.md  11-multi-tenancy-access-control.md  12-task-queue-architecture.md  12-task-queue-quickstart.md  13-scaling-enhancement.md  14-ollama-model-management.md
frontend/: FEATURES.md  IMPLEMENTATION.md  INTEGRATION.md  README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: HealthStatus.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/components/ui/: dialog.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/lib/: api.ts
frontend/src/pages/: CollectionsPage.tsx  DocumentsPage.tsx  QueryPage.tsx  TasksPage.tsx
scripts/: README.md  change_ollama_model.sh  download_model.py  setup_env.bat  setup_env.py  setup_env.sh  start_celery_worker.bat  start_celery_worker.sh  start_with_conda.bat  start_with_conda.sh  test_embedding.py
src/: __init__.py
src/api/: dependencies.py  main.py
src/api/middleware/: logging.py  rate_limit.py
src/api/models/: __init__.py  collection.py  common.py  document.py  nq_document.py  query.py  task.py
src/api/routes/: collections.py  documents.py  health.py  nq_documents.py  query.py  tasks.py
src/core/: __init__.py  config.py  exceptions.py  logging.py  loki_handler.py  security.py
src/embedding/: __init__.py  base.py  cache.py  model_loader.py  model_manager.py  startup.py
src/embedding/models/: __init__.py  bgem3.py  granite_embedding.py  minilm.py  mpnet.py  sentence_transformers_model.py
src/llm/: __init__.py  base.py  ollama_client.py  prompt_builder.py  stream_handler.py
src/llm/templates/: __init__.py  chat_template.txt  rag_template.txt
src/parsers/: __init__.py  base.py  docx_parser.py  md_parser.py  pdf_parser.py  txt_parser.py
src/services/: __init__.py  document_processor.py  embedding_service.py  llm_service.py  query_processor.py  storage_manager.py  vector_store.py
src/tasks/: __init__.py  celery_app.py  document_tasks.py  embedding_tasks.py  nq_crawler_task.py
src/utils/: __init__.py  helpers.py  text_chunker.py  text_cleaner.py  validators.py
tests/: __init__.py  conftest.py
tests/bdd/features/: batch_processing.feature  collection_management.feature  document_management.feature  error_handling.feature  rag_query.feature  similarity_search.feature
tests/bdd/steps/: batch_processing_steps.py  collection_management_steps.py  document_management_steps.py  error_handling_steps.py  rag_query_steps.py  similarity_search_steps.py
tests/bdd/support/: environment.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py
